--- a/public/desc/css/desc.css
+++ b/public/desc/css/desc.css
@@ -127,7 +127,9 @@ button{
     font-size: 1.1rem;
     font-weight: 500;
 }
-#favorite{
+
+#favourite
+{
     background-color: #ffffff;
     color: black;
     font-size: 1.1rem;
