--- a/views/store.ejs
+++ b/views/store.ejs
@@ -22,7 +22,7 @@
                 <div><h2 id="navicons">Men</h2></div>
                 <div><h2 id="navicons">Women</h2></div>
                 <div><h2 id="navicons">Kids</h2></div>
-                <div><h2><span id="sizes" class="material-symbols-outlined">favorite</span></h2></div>
+                <div><h2><a href="/favs"><span id="sizes" class="material-symbols-outlined">favorite</span></a></h2></div>
                 <div><h2><span id="sizes" class="material-symbols-outlined">shopping_cart</span></h2></div>
                 <div><h2><span id="sizes" class="material-symbols-outlined">account_circle</span></h2></div>
 
