--- a/public/css/home.css
+++ b/public/css/home.css
@@ -380,6 +380,16 @@ h3{
     font-weight: 400;
 }
 
+#btnshop:hover{
+    cursor: pointer;
+    background-color: rgba(0,0,0,0.8);
+}
+a:visited{
+    color: black;
+}
+a{
+    text-decoration: none;
+}
 
 #shoes:hover{
     height: 365px;
