--- a/views/addshoe.ejs
+++ b/views/addshoe.ejs
@@ -29,6 +29,11 @@
                 </div>
 
                 <div>
+                    <label>Type</label><br>
+                    <input type="text" name="Type"><br>
+                </div>
+
+                <div>
                     <label>Size</label><br>
                     <input type="number" min="1" max="15" name="Size"><br>
                 </div>
