--- a/views/favs.ejs
+++ b/views/favs.ejs
@@ -17,11 +17,11 @@
             </div>
 
             <div id="nav">
-                <div><h2 id="navicons">Home</h2></div>
-                <div><h2 id="navicons">Men</h2></div>
-                <div><h2 id="navicons">Women</h2></div>
-                <div><h2 id="navicons">Kids</h2></div>
-                <div><h2><span id="sizes" class="material-symbols-outlined">favorite</span></h2></div>
+                <div><a href="/home"><h2 id="navicons">Home</h2></a></div>
+                <div><a href="/store/Men"><h2 id="navicons">Men</h2></a></div>
+                <div><a href="/store/Women"><h2 id="navicons">Women</h2></a></div>
+                <div><a href="/store/Kids"><h2 id="navicons">Kids</h2></a></div>
+                <div><h2><a href="/favs"><span id="sizes" class="material-symbols-outlined">favorite</span></a></h2></div>
                 <div><h2><span id="sizes" class="material-symbols-outlined">shopping_cart</span></h2></div>
                 <div><h2><span id="sizes" class="material-symbols-outlined">account_circle</span></h2></div>
             </div>
