--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,10 +15,10 @@
                 <h1><span id="sizes" class="material-symbols-outlined">steps</span>GLAMFEET</h1>
             </div>
             <div id="nav">
-                <div><h2 id="navicons">Home</h2></div>
-                <div><h2 id="navicons">Men</h2></div>
-                <div><h2 id="navicons">Women</h2></div>
-                <div><h2 id="navicons">Kids</h2></div>
+                <div><a href="/home"><h2 id="navicons">Home</h2></a></div>
+                <div><a href="/store/Men"><h2 id="navicons">Men</h2></a></div>
+                <div><a href="/store/Women"><h2 id="navicons">Women</h2></a></div>
+                <div><a href="/store/Kids"><h2 id="navicons">Kids</h2></a></div>
                 <div><h2><a href="/favs"><span id="sizes" class="material-symbols-outlined">favorite</span></a></h2></div>
                 <div><h2><span id="sizes" class="material-symbols-outlined">shopping_cart</span></h2></div>
                 <div><h2><span id="sizes" class="material-symbols-outlined">account_circle</span></h2></div>
@@ -31,7 +31,7 @@
                     <h1 id="ok">NIKE COTTON SHOES</h1>
                     <h2>SPORTS SHOES</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ipsa exercitationem doloribus reiciendis cumque dicta obcaecati voluptatibus, sint et, perspiciatis iste at ipsam, fugiat inventore. Ipsa minus ipsum maxime corrupti.</p>
-                    <a href="/store"><button id="btnshop">Shop Now</button></a>
+                    <a href="/store/Men"><button id="btnshop">Shop Now</button></a>
 
                 </div>
                 <div id="photo">
@@ -108,7 +108,7 @@
                 </div>
 
                 <div id="viewtitle">
-                    <h2>View All >></h2>
+                    <a href="/store/Men"><h2>View All >></h2></a>
                 </div>
             </div>
             <div id="rev">
