--- a/public/css/favs.css
+++ b/public/css/favs.css
@@ -30,7 +30,7 @@ header{
 #nav{
     display: flex;
     justify-content: space-evenly;
-    width: 600px;
+    width: 630px;
 }
 
 
@@ -66,6 +66,8 @@ h2{
     font-size: 1.5rem;
     font-weight: 400;
     margin: 10px 5px;
+    display: flex;
+    align-items: center;
 }
 
 #navicons{
@@ -152,4 +154,9 @@ button{
     font-weight: 500;
     border-radius: 15px;
     margin-top: 15px;
+}
+
+#username{
+    font-size: 1.3rem;
+    font-weight: 500;
 }
