--- a/public/css/home.css
+++ b/public/css/home.css
@@ -33,7 +33,7 @@ header{
 #nav{
     display: flex;
     justify-content: space-evenly;
-    width: 600px;
+    width: 630px;
 }
 
 footer{
@@ -62,6 +62,8 @@ h2{
     font-size: 1.5rem;
     font-weight: 400;
     margin: 10px 0px;
+    display: flex;
+    align-items: center;
 }
 
 #navicons{
@@ -409,4 +411,9 @@ a{
 
 a:visited{
     color: black
+}
+
+#username{
+    font-size: 1.3rem;
+    font-weight: 500;
 }
