--- a/public/css/store.css
+++ b/public/css/store.css
@@ -47,7 +47,7 @@ header{
 #nav{
     display: flex;
     justify-content: space-evenly;
-    width: 600px;
+    width: 630px;
 }
 
 #store{
@@ -121,6 +121,16 @@ h2{
     font-size: 1.5rem;
     font-weight: 500;
     margin: 20px 5px;
+    display: flex;
+    align-items: center;
+}
+
+#hicon{
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: 20px 5px;
+    display: block;
+
 }
 
 input[type=checkbox]{
@@ -246,6 +256,11 @@ img{
     left: 10px;
     font-size: 3rem;
     font-weight: 100;
+}
+
+#username{
+    font-size: 1.3rem;
+    font-weight: 500;
 }
 
 
