--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,7 @@
                 <div><a href="/store/Kids"><h2 id="navicons">Kids</h2></a></div>
                 <div><h2><a href="/favs"><span id="sizes" class="material-symbols-outlined">favorite</span></a></h2></div>
                 <div><h2><span id="sizes" class="material-symbols-outlined">shopping_cart</span></h2></div>
-                <div><h2><span id="sizes" class="material-symbols-outlined">account_circle</span></h2></div>
+                <div><h2><span id="sizes" class="material-symbols-outlined">account_circle</span><div id="username"><%=user.Firstname%></div></h2></div>
             </div>
         </header>
 
