Added schemas and login

--- a/views/desc.ejs
+++ b/views/desc.ejs
@@ -40,6 +40,7 @@
                     <div id="brand"><div id="text"><%=item.Brand%></div></div>
                     <div id="price"><div id="text">MRP : &#8377;<%=item.Price%></div></div>
                     <div id="size"><div id="text">Size :</div><input type="number" min="1" max="15"></div>
+                    <div id="size"><div id="text">Qty :</div><input type="number" min="1"></div>
                     
                     <div id="cart">
                         <form method="post" action="/cart?_method=put">
