--- a/views/favs.ejs
+++ b/views/favs.ejs
@@ -39,7 +39,7 @@
                             <div id="moredets">
                                 <p><h2><%=i.Name%></h2></p>
                                 <p><h2><%=i.Brand%></h2></p>
-                                <p><h2>MRP : &#8377;<%=i.Price%></h2></p>
+                                <p><h2>MRP : &#8377;<%=i.news[0].Viewprice%></h2></p>
                                 <button type="submit">Add to Cart</button>
                             </div>
                             <div id="close">
