--- a/views/home.ejs
+++ b/views/home.ejs
@@ -101,7 +101,7 @@
                         <div id="shoes">
                             <a href="/desc/<%=i._id%>"><img id="sums" src=<%=i.Image%>></a>
                             <p id="nice"><%=i.Name%></p>
-                            <p id="nice">MRP : &#8377;<%=i.Price%></p>
+                            <p id="nice">MRP : &#8377;<%=i.news[0].Viewprice%></p>
                         </div>
                     <%})%>
                     
