--- a/views/store.ejs
+++ b/views/store.ejs
@@ -23,7 +23,7 @@
                 <div id="ihover"<%if(hype && hype.includes("Women")){%>style="border-bottom: 3px solid black;"<%}%>><button id="btntype" type="submit" name="Type" value="Women"><h2 id="navicons">Women</h2></button></div>
                 <div id="ihover"<%if(hype && hype.includes("Kids")){%>style="border-bottom: 3px solid black;"<%}%>><button id="btntype" type="submit" name="Type" value="Kids"><h2 id="navicons">Kids</h2></button></div>
                 <div id="ihover"><h2><a href="/favs"><span id="sizes" class="material-symbols-outlined">favorite</span></a></h2></div>
-                <div id="ihover"><h2><span id="sizes" class="material-symbols-outlined">shopping_cart</span></h2></div>
+                <div id="ihover"><h2><a href="/cart"><span id="sizes" class="material-symbols-outlined">shopping_cart</span></a></h2></div>
                 <div id="ihover"><h2><span id="sizes" class="material-symbols-outlined">account_circle</span><div id="username"><%=user.Firstname%></div></h2></div>
             </div>
 
